--- a/Arc_Ai/Arc_Ai/core/templates/core/admin_users_page.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/admin_users_page.html
@@ -30,6 +30,7 @@
                 </div>
                 <div id="settings">
                     <h1>User View</h1>
+                    <a href="{% url 'core:user_involved_map' %}" class="{% if active_page == 'home' %}active{% endif %}">Home</a>
                     <a href="{% url 'core:organization' %}" class="{% if active_page == 'organization' %}active{% endif %}">Organization</a>
                 </div>
             </div>
