--- a/Arc_Ai/Arc_Ai/core/templates/core/admin_files_page.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/admin_files_page.html
@@ -7,11 +7,19 @@
     <title>Admin-File Page</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'styles/popuperror.css' %}">
     <link rel="stylesheet" href="{% static 'styles/admin_files_page.css' %}">
     <link rel="stylesheet" href="{% static 'styles/styles.css' %}">
     
 </head>
 <body>
+    {% if messages %}
+    <div id="message-popup" class="message-popup">
+        {% for message in messages %}
+        <div class="message-content">{{ message }}</div>
+        {% endfor %}
+    </div>
+    {% endif %}
     <div id="header">
         <img src="{% static 'Images/Account.png' %}" alt="Account">
     </div>
